Fixed today's weight not showing correctly in frontend

--- a/frontend/flex/src/style/WithErrorMessage.module.css
+++ b/frontend/flex/src/style/WithErrorMessage.module.css
@@ -1,5 +1,5 @@
 #errorContainer {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
